--- a/src/main/resources/com/example/vos/assets/style.css
+++ b/src/main/resources/com/example/vos/assets/style.css
@@ -6,6 +6,10 @@
     -fx-text-fill: #3E4756;
 }
 
+.label{
+-fx-text-fill: #3E4756;
+}
+
 .form-pane {
     -fx-background-color: #f5f5f5;
     -fx-border-color: #ccc;
@@ -79,4 +83,18 @@
     -fx-font-size: 24px;
     -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);
     -fx-font-weight: 700;
+}
+.dropdown{
+-fx-background-color:  #fff;
+    -fx-border-color:  #155E98;
+    -fx-border-radius: 30px;
+    /* Circular border radius */
+    -fx-background-radius: 30px;
+    /* Circular background radius */
+    -fx-padding: 5px;
+    /* Increased padding */
+    -fx-pref-height: 40px;
+    /* Adjust height as needed */
+    -fx-pref-width: 300px;
+    /* Adjust width as needed */
 }
