--- a/src/main/resources/com/vertex/vos/dashBoard.fxml
+++ b/src/main/resources/com/vertex/vos/dashBoard.fxml
@@ -240,7 +240,7 @@
          </padding>
       </VBox>
       <Rectangle fx:id="profileHover" arcHeight="10.0" arcWidth="20.0" fill="DODGERBLUE" height="50.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" style="-fx-fill: #155d99;" width="10.0" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="0.0" />
-      <TextField fx:id="searchBar" layoutX="296.6" layoutY="8.0" prefHeight="40.0" prefWidth="883.0" promptText="Search" style="-fx-background-color: #f0f0f0; -fx-background-radius: 20;" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="250.0" AnchorPane.topAnchor="7.5">
+      <TextField fx:id="searchBar" layoutX="296.6" layoutY="8.0" prefHeight="40.0" prefWidth="883.0" promptText="Search" style="-fx-background-color: #f0f0f0; -fx-background-radius: 20;" visible="false" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="250.0" AnchorPane.topAnchor="7.5">
          <font>
             <Font size="15.0" />
          </font>
@@ -248,7 +248,7 @@
             <Insets bottom="8.0" left="20.0" right="5.0" top="8.0" />
          </padding>
       </TextField>
-      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="1301.0" layoutY="19.2" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="265.0" AnchorPane.topAnchor="15.0">
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="1301.0" layoutY="19.2" pickOnBounds="true" preserveRatio="true" visible="false" AnchorPane.rightAnchor="265.0" AnchorPane.topAnchor="15.0">
          <image>
             <Image url="@assets/icons/search.png" />
          </image>
