--- a/src/main/resources/com/vertex/vos/purchaseOrderConfirmationAccounting.fxml
+++ b/src/main/resources/com/vertex/vos/purchaseOrderConfirmationAccounting.fxml
@@ -5,37 +5,40 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
 <AnchorPane prefHeight="900.0" prefWidth="1600.0" style="-fx-background-color: #f0f0f0; -fx-background-radius: 20px 0px 0px 0px;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.PurchaseOrderConfirmationController">
    <children>
       <VBox layoutX="30.0" layoutY="15.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label fx:id="companyNameHeaderLabel" style="-fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="header" stylesheets="@assets/style.css" text="Purchase Order Request Summary">
-               <graphic>
-                  <ImageView fitHeight="150.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@assets/icons/Graph Report.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Label>
+            <HBox alignment="CENTER_LEFT" spacing="15.0">
+               <children>
+                  <Label style="-fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="header" stylesheets="@assets/style.css" text="Purchase Order Request Summary">
+                     <graphic>
+                        <ImageView fitHeight="150.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@assets/icons/Graph Report.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Label>
+                  <TextField fx:id="poSearchBar" promptText="Search PO Number" />
+                  <TextField fx:id="supplierSearchBar" layoutX="464.0" layoutY="15.0" promptText="Search Supplier " />
+               </children>
+            </HBox>
             <TableView fx:id="tablePOConfirmation" stylesheets="@assets/table.css">
               <columns>
-                <TableColumn fx:id="id" prefWidth="75.0" text="Request No." />
-                  <TableColumn fx:id="branch_name" prefWidth="75.0" text="Branch Name" />
-                  <TableColumn fx:id="supplier_name" prefWidth="75.0" text="Supplier Name" />
+                <TableColumn fx:id="id" prefWidth="75.0" text="PO NO" />
                   <TableColumn fx:id="type_of_transaction" prefWidth="75.0" text="Type of Transaction" />
-                <TableColumn fx:id="date" prefWidth="75.0" text="Date" />
-                  <TableColumn fx:id="encoder_id" prefWidth="75.0" text="Requested By" />
-                  <TableColumn fx:id="approver_id" prefWidth="75.0" text="Approving Officer" />
-                  <TableColumn fx:id="total_amount" prefWidth="75.0" text="Total" />
-                  <TableColumn fx:id="vat_total" prefWidth="75.0" text="VAT" />
-                  <TableColumn fx:id="withholding_total" prefWidth="75.0" text="EWT" />
+                  <TableColumn fx:id="supplier_name" prefWidth="75.0" text="Supplier Name" />
+                <TableColumn fx:id="date_requested" prefWidth="75.0" text="Date Requested" />
                   <TableColumn fx:id="status" prefWidth="75.0" text="Status" />
+                  <TableColumn fx:id="date_status" prefWidth="75.0" text="Date Of Status" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
