--- a/src/main/resources/com/vertex/vos/structureNavigation.fxml
+++ b/src/main/resources/com/vertex/vos/structureNavigation.fxml
@@ -147,6 +147,26 @@
                         </DropShadow>
                      </effect>
                   </VBox>
+                  <VBox fx:id="salesmanBox" alignment="TOP_CENTER" layoutX="185.0" layoutY="193.0" prefWidth="160.0" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
+                     <children>
+                        <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@assets/icons/Salesman.png" />
+                           </image>
+                        </ImageView>
+                        <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" text="Salesman" textAlignment="CENTER" />
+                     </children>
+                     <padding>
+                        <Insets bottom="30.0" left="15.0" right="15.0" top="30.0" />
+                     </padding>
+                     <effect>
+                        <DropShadow>
+                           <color>
+                              <Color opacity="0.5" />
+                           </color>
+                        </DropShadow>
+                     </effect>
+                  </VBox>
                </children>
             </TilePane>
          </children>
