--- a/src/main/resources/com/vertex/vos/tableManager.fxml
+++ b/src/main/resources/com/vertex/vos/tableManager.fxml
@@ -5,13 +5,14 @@
 <?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane style="-fx-background-color: #F5FAFF; -fx-background-radius: 20px 0px 0px 0px;" stylesheets="@assets/table.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.TableManagerController">
+<AnchorPane style="-fx-background-color: #F5FAFF; -fx-background-radius: 20px 0px 0px 0px;" stylesheets="@assets/table.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.TableManagerController">
    <children>
       <VBox layoutX="10.0" layoutY="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -27,6 +28,8 @@
                                  </image>
                               </ImageView>
                               <Label fx:id="tableHeader" style="-fx-font-size: 25px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF); -fx-font-weight: 700;" styleClass="text-title-logo" text="Table Manager" />
+                              <TextField fx:id="searchBar" promptText="Search" stylesheets="@assets/style.css" visible="false" />
+                              <TextField fx:id="categoryBar" layoutX="257.0" layoutY="15.0" promptText="Search" stylesheets="@assets/style.css" visible="false" />
                            </children>
                         </HBox>
                      </children>
